# IndieStudio

./: CMakeLists.txt  log.txt  server
include/: AActor.hpp  AI.hpp  ActionHandler.hpp  BlockDestruct.hpp  Bomb.hpp  Bomberman.hpp  Bonus.hpp  Camera.hpp  Client.hpp  Controller.hpp  DynamicObj.hpp  EventManager.hpp  ExplosionParticles.hpp  GameModule.hpp  GameObj.hpp  Global.hpp  IActor.hpp  IDynamicObj.hpp  IGameModule.hpp  IGameObj.hpp  IStaticObj.hpp  Key.hpp  Map.hpp  MapHandler.hpp  MecheParticles.hpp  Particle.hpp  PersSelection.hpp  PersoParticles.hpp  PodiumManager.hpp  RessourcesInfo.hpp  SaverLoader.hpp  SplashScreen.hpp  StaticObj.hpp  Status.hpp  TreeParticles.hpp  WallPass.hpp  utils.hpp
include/NetworkCommunication/: NetworkClient.hpp
include/UI/: InterfaceManager.hpp
include/UI/Scene/: AInterfaceScene.hpp  IInterfaceScene.hpp  InterfaceGameModeOld.hpp  InterfaceHelp.hpp  InterfaceKeyBinding.hpp  InterfaceLocalLobby.hpp  InterfaceMenu.hpp  InterfaceOption.hpp  InterfacePlay.hpp  InterfaceServerConnect.hpp  InterfaceServerLobby.hpp  InterfaceServerRoom.hpp
include/musicPlayer/: music.hpp  musicPlayer.hpp  sound.hpp
network/: CMakeLists.txt  README  client  server
network/include/: client.hpp  room.hpp  server.hpp  tools.hpp
network/src/: client  clientIostream.cpp  clientS.cpp  room.cpp  server.cpp  word_array.cpp
network/src/tmp/: clientBoost.cpp  server.py  serverBoost.cpp  serverIostream.cpp
ressources/UI/gameMode/: KEY_BINDING
ressources/audio/: musicList.txt  soundList.txt
ressources/models/Ape/: baptiste.3ds  jordan.3ds  karim.3ds  lucas.3ds
ressources/models/Bomb/: bomb.3ds
ressources/models/Bonus/: bombUp.3ds  fireUp.3ds  speedUp.3ds  star.3ds  wallPass.3ds
ressources/models/Cat/: cat.3ds
ressources/models/Chicken/: Chicken1.3ds
ressources/models/Fire/: fire.3ds
ressources/models/Ground/: forest.3ds  ground.3ds
ressources/models/HUDModels/: catHUD.3ds  chickenHUD.3ds  hootyHUD.3ds  lamaHUD.3ds  penguinHUD.3ds  pigHUD.3ds  sheepHUD.3ds  snakeHUD.3ds  squirrelHUD.3ds
ressources/models/Hooty/: hooty.3ds
ressources/models/Lama/: lama.3ds
ressources/models/Penguin/: penguin.3ds
ressources/models/Pig/: pig.3ds
ressources/models/Sheep/: sheep.3ds
ressources/models/Snake/: snake.3ds
ressources/models/Squirrel/: squirrel.3ds
ressources/models/Walls/: fence.3ds  haystack.3ds  tree.3ds
scores/data/: scores.txt
scores/include/: scores.hpp
scores/src/: scores.cpp
script/: AIEasy.rb  AStar.rb  MapGenerator.rb  MapPattern.rb  mapFrag.txt
src/: main.cpp  utils.cpp
src/Bonus/: Bonus.cpp  WallPass.cpp
src/NetworkCommunication/: NetworkClient.cpp
src/Particle/: ExplosionParticles.cpp  MecheParticles.cpp  Particle.cpp  PersoParticles.cpp  TreeParticles.cpp
src/PersSelection/: PersSelection.cpp
src/Podium/: PodiumManager.cpp
src/SaverLoader/: Loader.cpp  Saver.cpp
src/SplashScreen/: SpashScreen.cpp
src/Status/: Status.cpp
src/UI/: InterfaceManager.cpp
src/UI/Scene/: AInterfaceScene.cpp  InterfaceGameModeOld.cpp  InterfaceHelp.cpp  InterfaceKeyBinding.cpp  InterfaceLocalLobby.cpp  InterfaceMenu.cpp  InterfaceOption.cpp  InterfacePlay.cpp  InterfaceServerConnect.cpp  InterfaceServerLobby.cpp  InterfaceServerRoom.cpp
src/actionHandler/: ActionHandler.cpp  EventManager.cpp  MapHandler.cpp
src/actor/: AActor.cpp  AI.cpp  Bomberman.cpp
src/controller/: Controller.cpp
src/gameModule/: GameModule.cpp
src/keyHandler/: key.cpp
src/musicPlayer/: music.cpp  musicPlayer.cpp  sound.cpp
